<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<!-- ************************************************************* -->
	<!-- *** POM Relationships *************************************** -->
	<!-- ************************************************************* -->

	<groupId>GR3D</groupId>
	<artifactId>GR3D</artifactId>
	<version>2.0-SNAPSHOT</version>

	<properties>
		<netbeans.hint.license>gpl30</netbeans.hint.license>
		<build.timestamp>${maven.build.timestamp}</build.timestamp>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<geotools.version>21-RC</geotools.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>fr.cemagref</groupId>
			<artifactId>simaqualife</artifactId>
			<version>2.0</version>
		</dependency>

		<dependency>
			<groupId>commons-lang</groupId>
			<artifactId>commons-lang</artifactId>
			<version>2.6</version>
			<type>jar</type>
		</dependency>

		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>3.8.1</version>
			<scope>test</scope>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.geotools/gt-shapefile -->
		<dependency>
			<groupId>org.geotools</groupId>
			<artifactId>gt-shapefile</artifactId>
			<version>${geotools.version}</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.geotools/gt-swing -->
		<dependency>
			<groupId>org.geotools</groupId>
			<artifactId>gt-swing</artifactId>
			<version>${geotools.version}</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.geotools/gt-render -->
		<dependency>
			<groupId>org.geotools</groupId>
			<artifactId>gt-render</artifactId>
			<version>${geotools.version}</version>
		</dependency>



		<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.6</version>
		</dependency>


		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-math3</artifactId>
			<version>3.5</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/com.thoughtworks.xstream/xstream -->
		<dependency>
			<groupId>com.thoughtworks.xstream</groupId>
			<artifactId>xstream</artifactId>
			<version>1.4.11.1</version>
		</dependency>

	</dependencies>

	<!-- ************************************************************* -->
	<!-- *** Project Information ************************************* -->
	<!-- ************************************************************* -->

	<name>${project.artifactId} ${project.version}</name>
	<description></description>
	<url></url>

	<licenses>
		<license>
			<name>GPL</name>
			<url>http://www.gnu.org/copyleft/gpl.html</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<!-- ************************************************************* -->
	<!-- *** Build Settings ****************************************** -->
	<!-- ************************************************************* -->

	<packaging>jar</packaging>

	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.7.0</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>

			<plugin>
				<!-- generates the OSGi compatible Manifest file -->
				<groupId>org.apache.felix</groupId>
				<artifactId>maven-bundle-plugin</artifactId>
				<extensions>true</extensions>
				<version>3.5.0</version>
				<executions>
				</executions>
				<configuration>
					<manifestLocation>target/META-INF</manifestLocation>
					<!--finalName>${symbolic.name}_${project.version}</finalName -->
					<instructions>
						<!--Bundle-Name>${project.groupId}.${project.artifactId}</Bundle-Name> <Bundle-SymbolicName>${project.groupId}.${project.artifactId}</Bundle-SymbolicName -->
						<Import-Package>*;resolution:=optional</Import-Package>
						<Export-Package>fr.cemagref.simaqualife.extensions.pilot.BatchRunner;fr.cemagref.simaqualife.*;miscellaneous.*</Export-Package>
						<Embed-Dependency>*;scope=!provided;inline=true</Embed-Dependency>
						<Embed-Transitive>true</Embed-Transitive>
						<!--eclipse.buddypolicy>global</eclipse.buddypolicy -->
					</instructions>
				</configuration>
			</plugin>

			<plugin>
				<!-- uses the previously generated Manifest file (with maven-bundle-plugin) -->
				<artifactId>maven-jar-plugin</artifactId>
				<configuration>
					<archive>
						<manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<!-- plugin used for merging the various GeoTools META-INF/services files (specific transformer below) -->
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>1.3.1</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<transformers>
								<transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
							</transformers>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
		<!-- only properties file will be filtered -->
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
				<includes>
					<include>**/*.properties</include>
				</includes>
			</resource>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>false</filtering>
				<excludes>
					<exclude>**/*.properties</exclude>
				</excludes>
			</resource>
		</resources>
	</build>

	<repositories>

		<repository>
			<id>trac.clermont.cemagref.fr.nexus.public</id>
			<url>http://trac.clermont.cemagref.fr/nexus/content/groups/public</url>
		</repository>
		<repository>
			<id>trac.clermont.cemagref.fr.nexus.snapshots</id>
			<url>http://trac.clermont.cemagref.fr/nexus/content/repositories/snapshots</url>
		</repository>

		<repository>
			<id>osgeo</id>
			<name>Open Source Geospatial Foundation Repository</name>
			<url>http://download.osgeo.org/webdav/geotools/</url>
		</repository>

		<repository>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
			<id>boundless</id>
			<name>Boundless Maven Repository</name>
			<url>http://repo.boundlessgeo.com/main</url>
		</repository>

		<repository>
			<id>maven2-repository.dev.java.net</id>
			<name>Java.net repository</name>
			<url>http://download.java.net/maven/2</url>
		</repository>

	</repositories>

</project>



